fix accordion actions overflow bug

--- a/src/Accordion/Accordion.module.scss
+++ b/src/Accordion/Accordion.module.scss
@@ -85,6 +85,7 @@
 
 .actions {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
   gap: 0.5rem;
   padding: 0.5rem 1rem;
